@@ -1,0 +1,5 @@
+from enum import Enum
+class RoleCodes(Enum):
+    STUDENT='1'
+    ADMIN='2'
+    TEACHER='3'
