@@ -48,5 +48,9 @@ checks if user's avatar exist shows that, else shows default avatar
 تغییرات من --پاک کردن عکس پروفایل قبلی در صورت جایگزینی ، فارسی سازی ادمین
 تغییرات من -تغییر تقویم داشبورد و واگذاری کارهای بک اند تا جای ممکن به js
 تغییر صفحه ادمین و افزودن تقویم فارسی
-pip install django-jalali-date   
+pip install django-jalali-date    #
 فارسی سازی تقویم تمام شد
+
+تغییرات اعمالی : انتصاب عکس پروفایل پیش فرض به تفکیک نقش دانش آموز و معلم
+گرفتن ارور در صورت نداشت نقش مدرس برای مدرس دوره در ادمین
+# سطر روبرو را به جدول accounts_role اضافه کنید {ID=3 , TITLE ='مدرس',CODE='3'}
